# Military-Conquest

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TD_TowerDefense_SFML.cbp  cmake_install.cmake  main.cpp
Assets/: boss1.psd  boss2.clip  config.json  custom-config.json  custom-hard.map  easy.map  hard.map  tile-set.xcf
Assets/stub/: MARTELLO.psd  MARTELLOe_cacciavite.psd  boss-1.xcf  boss-2.xcf  boss-3.xcf  boss2.psd  carro2.clip  carro2.psd  carro3.clip  carro3.psd  carro4.clip  carro4.psd  carro5.clip  carro5.psd  carro_1.clip  carro_1.psd  coin-modified-20x20.xcf  coin.psd  coin.xcf  croce.psd  cuore.clip  enemy-tile-set-gif.xcf  enemy-tile-set.xcf  heart-modified-20x20.xcf  heart.psd  hud orizzonatale.xcf  hud.psd  laser.clip  laser.psd  left-arrow.xcf  logo.xcf  right-arrow.xcf  rounded-box.xcf  tileset.xcf  torre_4.clip  torre_4.psd  torretta 5.clip  torretta 5.psd  tower-1-front.clip  turret-1.clip  (+3 more)
Classes/: EventHandler.cpp  EventHandler.h  RenderHandler.cpp  RenderHandler.h
Classes/Achievements/: KilledEnemies.h  SurvivedWaves.h
Classes/Adapters/: EnemyGeneratorAdapter.h  TurretAdapter.h
Classes/Elements/: Bullet.cpp  Bullet.h  ButtonIcon.cpp  ButtonIcon.h  ButtonRect.cpp  ButtonRect.h  DrawableFactory.cpp  DrawableFactory.h  Enemy.cpp  Enemy.h  EnemyGenerator.cpp  EnemyGenerator.h  Tower.cpp  Tower.h  Turret.cpp  Turret.h  TurretGenerator.cpp  TurretGenerator.h  WaveController.cpp  WaveController.h
Classes/Events/: BuildTurret.h  CraftTurretButtonClick.h  DifficultButtonHover.h  DifficultEasyButtonClick.h  IconButtonHover.h  PlacedTurretClick.h  PlacedTurretHover.h  PlacedTurretOut.h  StartButtonClick.h  StartButtonHover.h  TurretMenuButtonClick.h  TurretPositioning.h  TurretUpgrade.h
Classes/Interface/: Achievement.h  AchievementNotifier.h  AchievementObserver.h  Button.h  Event.h  FakeButton.h  MouseObserver.h  Movement.h  Notifier.h  Observer.h  Random.h  Wave.h
Classes/Maps/: AssetsMap.cpp  AssetsMap.h  Map.h  MapEasy.h  MapHard.h  RenderableMap.cpp  RenderableMap.h
Classes/Observers/: AchievementKill_WaveObserver.h  AchievementObserver.h  EnemyLPObserver.h  MouseClickObserver.h  MouseHoverObserver.h  MouseMotionObserver.h  MouseOutObserver.h  TowerLPObserver.h
Classes/Parser/: Config.cpp  Config.h  MapParser.h
Classes/States/: AchievementInfos.h  DifficultState.h  EnemyState.h  EnemyStats.h  GameState.h  MouseStates.h  ObserversTypeId.h  TurretState.h  TurretStats.h  windowSize.h
Tests/: CMakeLists.txt  ConfigParserTests.h  DrawableFactoryTest.h  EnemyTests.h  Makefile  MapTests.h  TurretTests.h  battleTest.h  cmake_install.cmake  mainTests.cpp  parserTests.h
Tests/googletest/: Makefile  cmake_install.cmake  gtest.cbp
